kubernetes/app-yaml/jenkins-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: kube-system
  annotations:
    # ensure the client ip is propagated to avoid the invalid crumb issue (k8s <1.7)
    # service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  selector:
    name: jenkins
  # k8s 1.7+
  ports:
    -
      name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    -
      name: slave
      port: 50000
      protocol: TCP
