kubernetes/app-yaml/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-web
spec:
  selector:
    app: prometheus
  ports:
  - name: web
    port: 80
    targetPort: 9090
