kubernetes/app-yaml/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: kube-system
spec:
  rules:
  - host: jenkins-ingress.past123.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: http
